--- a/AmazonTranslateTradosPlugin/Studio/TellMe/View/ProviderSelectorView.xaml
+++ b/AmazonTranslateTradosPlugin/Studio/TellMe/View/ProviderSelectorView.xaml
@@ -46,7 +46,7 @@
                        Margin="0 0 0 0" />
 
             <TextBlock Grid.Row="1"
-                       Text="Multiple instances of the Amazon Translate Trados Plugin have been detected. Please select the one you wish to open:"
+                       Text="Multiple instances of the Amazon Translate MT provider have been detected. Please select the one you wish to open:"
                        TextWrapping="Wrap"
                        Focusable="True"
                        HorizontalAlignment="Center"
