--- a/Wordfast TXML/TellMe/View/SettingsActionWarning.xaml
+++ b/Wordfast TXML/TellMe/View/SettingsActionWarning.xaml
@@ -6,8 +6,8 @@
         xmlns:root="clr-namespace:Sdl.Community.FileTypeSupport.TXML"
         mc:Ignorable="d"
         Title="TellMe Warning"
-        Width="400"
-        Height="320"
+        Width="600"
+        Height="256"
         ResizeMode="NoResize"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
@@ -27,7 +27,6 @@
             BorderBrush="#d4d4d4">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
@@ -60,18 +59,18 @@
                        Grid.ColumnSpan="2"
                        Text="{x:Static root:PluginResources.SettingsWarning}"
                        Focusable="True"
-                       FontWeight="DemiBold"
                        Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
                        MaxWidth="9999"
                        TextWrapping="Wrap"
                        Margin="24 8 24 0" />
 
-            <TextBlock Grid.Row="2"
+            <TextBlock Grid.Row="3"
                        Grid.ColumnSpan="2"
                        Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
                        HorizontalAlignment="Left"
+                       VerticalAlignment="Center"
                        Focusable="True"
-                       Margin="24 24 24 0"
+                       Margin="24 0"
                        KeyDown="OpenUrl_KeyPressed">
 				<Run Text="For more informations," />
 				<Run Text="click here"
@@ -93,7 +92,7 @@
 						</Style>
 					</Run.Style>
 				</Run>
-				<Run Text="for documentation." />
+				<Run Text="to view the documentation." />
             </TextBlock>
 
             <Button Grid.Row="4"
@@ -103,7 +102,7 @@
                     Click="CloseWindow_Click"
                     HorizontalAlignment="Right"
                     Width="120"
-                    Margin="0 16 16 16" />
+                    Margin="16" />
         </Grid>
     </Border>
 </Window>
