Multilingual Excel File Type 2022: updated tell me; bumped version to 1.2.2.1

--- a/Multilingual.Excel.FileType/Multilingual.Excel.FileType/TellMe/WarningWindow/SettingsActionWarning.xaml
+++ b/Multilingual.Excel.FileType/Multilingual.Excel.FileType/TellMe/WarningWindow/SettingsActionWarning.xaml
@@ -96,7 +96,8 @@
 
             <Button Grid.Row="2"
                     Grid.ColumnSpan="2" Grid.Column="0"
-                    Content="Close"
+                    Content="OK"
+                    Style="{StaticResource Sdl.Button.PrimaryStyle}"
                     Click="CloseWindow_Click"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
