--- a/Multilingual.XML.FileType/Multilingual.XML.FileType/TellMe/WarningWindow/SettingsActionWarning.xaml
+++ b/Multilingual.XML.FileType/Multilingual.XML.FileType/TellMe/WarningWindow/SettingsActionWarning.xaml
@@ -6,8 +6,8 @@
 		xmlns:root="clr-namespace:Multilingual.XML.FileType"
 		mc:Ignorable="d"
 		Title="TellMe Warning"
-		Width="400"
-		Height="300"
+		Width="500"
+		Height="270"
 		ResizeMode="NoResize"
 		WindowStyle="None"
 		WindowStartupLocation="CenterScreen"
@@ -28,7 +28,6 @@
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
-				<RowDefinition Height="Auto" />
 				<RowDefinition Height="*" />
 				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
@@ -40,36 +39,37 @@
 
 			<Image Grid.Row="0"
 				   Grid.Column="0"
-				   Source="/Multilingual.XML.FileType;component/Resources/Warning.png"
-				   Height="40"
+                   Source="../../Resources/information-48.png"
+                   Height="40"
 				   Width="40"
 				   RenderOptions.BitmapScalingMode="HighQuality"
-				   Margin="32 16 16 0" />
+				   Margin="15 16 0 0" />
 
 			<TextBlock Grid.Row="0"
 					   Grid.Column="1"
 					   Text="{x:Static root:PluginResources.SettingsAction_Title}"
 					   Style="{StaticResource Sdl.TextBlock.InformationTitleStyle}"
-					   FontSize="16"
+					   FontSize="18"
 					   HorizontalAlignment="Left"
 					   VerticalAlignment="Center"
 					   Margin="8 16 0 0" />
 
-			<TextBlock Grid.Row="1"
+			<TextBlock Grid.Column="0" Grid.Row="1"
 					   Grid.ColumnSpan="2"
 					   Text="{x:Static root:PluginResources.SettingsAction_OpenOptionsText}"
 					   Focusable="True"
 					   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
 					   MaxWidth="9999"
 					   TextWrapping="Wrap"
-					   Margin="24 8 24 0" />
+					   Margin="24 15 24 0" />
 
-			<TextBlock Grid.Row="2"
+			<TextBlock Grid.Column="0" Grid.Row="2"
 					   Grid.ColumnSpan="2"
+					   VerticalAlignment="Center"
 					   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
 					   HorizontalAlignment="Left"
 					   Focusable="True"
-					   Margin="24 12 24 0"
+					   Margin="24 0 24 0"
 					   KeyDown="OpenUrl_KeyPressed">
 				<Run Text="{x:Static root:PluginResources.SettingsAction_ExternalHelp_1}" />
 				<Run Text="{x:Static root:PluginResources.SettingsAction_ExternalHelp_2}"
@@ -94,14 +94,16 @@
 				<Run Text="{x:Static root:PluginResources.SettingsAction_ExternalHelp_3}" />
 			</TextBlock>
 
-			<Button Grid.Row="4"
-					Grid.ColumnSpan="2"
-					Content="Close"
-					Style="{StaticResource Sdl.Button.SecondaryStyle}"
-					Click="CloseWindow_Click"
-					HorizontalAlignment="Right"
-					Width="120"
-					Margin="0 16 16 16"/>
+			<Button Grid.Row="2"
+                    Grid.ColumnSpan="2" Grid.Column="0"
+                    Content="OK"
+					Style="{StaticResource Sdl.Button.PrimaryStyle}"
+                    Click="CloseWindow_Click"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    Height="28" Width="90" 
+                    Margin="16" />
 		</Grid>
 	</Border>
 </Window>
