--- a/MicrosoftTranslatorProvider/View/ProviderConfigurationView.xaml
+++ b/MicrosoftTranslatorProvider/View/ProviderConfigurationView.xaml
@@ -122,7 +122,16 @@
 					Width="120"
 					Height="32"
 					Margin="8 0" />
-		</StackPanel>
+
+            <Button Content="Proxy"
+                    Style="{StaticResource Sdl.Button.SecondaryStyle}"
+                    Command="{Binding OpenProxySettingsCommand}"
+                    FontSize="11"
+                    FontWeight="DemiBold"
+                    Width="120"
+                    Height="32"
+                    Margin="8 0" />
+        </StackPanel>
 
 		<StackPanel Grid.Row="3"
 					Grid.Column="1"
