--- a/MicrosoftTranslatorProvider/Styles/Buttons.xaml
+++ b/MicrosoftTranslatorProvider/Styles/Buttons.xaml
@@ -4,6 +4,36 @@
         <ResourceDictionary Source="General.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
+    <Style x:Key="LinkButton" 
+           TargetType="Button"
+           BasedOn="{StaticResource ResourceKey={x:Type Button}}">
+        <Setter Property="Width" Value="Auto"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <ContentPresenter Content="{TemplateBinding Content}" 
+                                      ContentTemplate="{TemplateBinding  ContentTemplate}"
+                                      VerticalAlignment="Center">
+                        <ContentPresenter.Resources>
+                            <Style TargetType="{x:Type TextBlock}">
+                                <Setter Property="TextDecorations" Value="Underline" />
+                            </Style>
+                            <Style TargetType="{x:Type AccessText}">
+                                <Setter Property="TextDecorations" Value="Underline" />
+                            </Style>
+                        </ContentPresenter.Resources>
+                    </ContentPresenter>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Foreground" Value="Blue" />
+        <Setter Property="Cursor" Value="Hand" />
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="true">
+                <Setter Property="Foreground" Value="DarkBlue" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
     <!--Window Control Button Style-->
     <Style x:Key="WindowControlButtonStyle"
            TargetType="{x:Type Button}">
