--- a/MicrosoftTranslatorProvider/View/AuthenticationView.xaml
+++ b/MicrosoftTranslatorProvider/View/AuthenticationView.xaml
@@ -20,54 +20,55 @@
 		Loaded="Window_Loaded"
 		Closing="Window_Closing">
 
-	<Window.Resources>
-		<ResourceDictionary>
+    <Window.Resources>
+        <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
-				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ComboBoxResources.xaml" />
-				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
-			</ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ComboBoxResources.xaml" />
+                <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MicrosoftTranslatorProvider;component/Styles/Buttons.xaml" />
+            </ResourceDictionary.MergedDictionaries>
 
-			<converters:EmptyToVisibility x:Key="EmptyToVisibilityConverter" />
-			<converters:InvertableBoolEnabledConverter x:Key="InvertableBoolEnabledConverter" />
-			<converters:InvertableBooleanToVisibilityConverter x:Key="InvertableBooleanToVisibilityConverter" />
+            <converters:EmptyToVisibility x:Key="EmptyToVisibilityConverter" />
+            <converters:InvertableBoolEnabledConverter x:Key="InvertableBoolEnabledConverter" />
+            <converters:InvertableBooleanToVisibilityConverter x:Key="InvertableBooleanToVisibilityConverter" />
 
-			<DataTemplate DataType="{x:Type viewModels:MicrosoftAuthenticationViewModel}">
-				<views:MicrosoftAuthenticationView />
-			</DataTemplate>
+            <DataTemplate DataType="{x:Type viewModels:MicrosoftAuthenticationViewModel}">
+                <views:MicrosoftAuthenticationView />
+            </DataTemplate>
 
-			<DataTemplate DataType="{x:Type viewModels:PrivateEndpointAuthenticationViewModel}">
-				<views:PrivateEndpointAuthenticationView />
-			</DataTemplate>
+            <DataTemplate DataType="{x:Type viewModels:PrivateEndpointAuthenticationViewModel}">
+                <views:PrivateEndpointAuthenticationView />
+            </DataTemplate>
 
-		</ResourceDictionary>
-	</Window.Resources>
+        </ResourceDictionary>
+    </Window.Resources>
 
-	<Border Background="#f0f0f0"
+    <Border Background="#f0f0f0"
 			BorderThickness="1"
 			BorderBrush="#c0c0c0">
-		<Grid>
-			<Grid.RowDefinitions>
-				<RowDefinition Height="Auto" />
-				<RowDefinition Height="*" />
-			</Grid.RowDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-			<Image Grid.Row="0"
+            <Image Grid.Row="0"
 				   Source="../Resources/mtp_logo.png"
 				   Margin="32 24" />
 
-			<Border Grid.Row="1"
+            <Border Grid.Row="1"
 					Background="#ffffff"
 					BorderBrush="#c0c0c0"
 					BorderThickness="1"
 					CornerRadius="8"
 					Margin="24 0 24 24">
-				<Grid>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="Auto" />
-						<RowDefinition Height="*" />
-						<RowDefinition Height="Auto" />
-					</Grid.RowDefinitions>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
 
                     <StackPanel Grid.Row="0"
                                 HorizontalAlignment="Center"
@@ -98,16 +99,16 @@
                         </StackPanel>
                     </StackPanel>
 
-					<ContentControl Grid.Row="0"
+                    <ContentControl Grid.Row="0"
 									Grid.RowSpan="2"
 									Content="{Binding SelectedAuthenticationView}"
 									Focusable="False"
 									Margin="0 8"
 									VerticalAlignment="Stretch" />
 
-					<StackPanel Grid.Row="2"
+                    <StackPanel Grid.Row="2"
 								Margin="0 0 0 16">
-						<Button Content="Microsoft API Key"
+                        <Button Content="Microsoft API Key"
                                 AutomationProperties.HelpText="API keys are used to authenticate Azure Microsoft Translator, providing a simple method to access the service through a secure key-based system."
 								Style="{StaticResource Sdl.Button.PrimaryStyle}"
 								Command="{Binding SelectMicrosoftServiceCommand}"
@@ -118,7 +119,7 @@
 								Height="32"
 								Margin="0 4" />
 
-						<Button Content="Private Endpoint"
+                        <Button Content="Private Endpoint"
                                 AutomationProperties.HelpText="Private endpoints require a private URL to establish a direct connection between Azure and your company network bypassing the public internet."
 								Style="{StaticResource Sdl.Button.PrimaryStyle}"
 								Command="{Binding SelectMicrosoftServiceCommand}"
@@ -129,27 +130,57 @@
 								Height="32"
 								Margin="0 4" />
 
-						<Button Content="Exit"
-								Style="{StaticResource Sdl.Button.SecondaryStyle}"
-								Visibility="{Binding IsAuthenticationMethodSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}, ConverterParameter=Inverted}"
-								Command="{Binding ExitApplicationCommand}"
-								Cursor="Hand"
-								Width="176"
-								Height="32"
-								Margin="0 8" />
+                       
 
-						<Button Content="Back"
-								Style="{StaticResource Sdl.Button.SecondaryStyle}"
-								Command="{Binding SelectMicrosoftServiceCommand}"
-								CommandParameter="{x:Static root:AuthenticationType.None}"
-								Visibility="{Binding IsAuthenticationMethodSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
-								Cursor="Hand"
-								Width="176"
-								Height="32"
-								Margin="0 0 0 8" />
-					</StackPanel>
-				</Grid>
-			</Border>
-		</Grid>
-	</Border>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+
+
+                            <Grid Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Margin="10,0,0,10">
+                                <Button Style="{StaticResource LinkButton}" 
+                                        Command="{Binding OpenProxySettingsCommand}"
+                                        VerticalAlignment="Bottom"
+                                        HorizontalContentAlignment="Left"
+                                        HorizontalAlignment="Left">
+                                    <TextBlock TextDecorations="Underline" Text="Proxy Settings"/>
+                                </Button>
+                            </Grid>
+
+                            <Button Grid.Row="0" Grid.Column="1"  Content="Exit"
+                                    Style="{StaticResource Sdl.Button.SecondaryStyle}"
+                                    Visibility="{Binding IsAuthenticationMethodSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+                                    Command="{Binding ExitApplicationCommand}"
+                                    Cursor="Hand"
+                                    Width="176"
+                                    Height="32"
+                                    Margin="0 8" />
+
+                            <Button Grid.Row="1" Grid.Column="1" Content="Back"
+                                    Style="{StaticResource Sdl.Button.SecondaryStyle}"
+                                    Command="{Binding SelectMicrosoftServiceCommand}"
+                                    CommandParameter="{x:Static root:AuthenticationType.None}"
+                                    Visibility="{Binding IsAuthenticationMethodSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
+                                    Cursor="Hand"
+                                    Width="176"
+                                    Height="32"
+                                    Margin="0 0 0 8" />
+
+                            <Grid Grid.Row="0" Grid.RowSpan="2" Grid.Column="2" Margin="10,0,10,0">
+                            </Grid>
+                        </Grid>
+
+                    </StackPanel>
+                </Grid>
+            </Border>
+        </Grid>
+    </Border>
 </Window>
